--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -9,6 +9,7 @@ templ Base(title string) {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<script src="/static/js/htmx.min.js"></script>
+			<script src="/static/js/theme.js"></script>
 			<link rel="stylesheet" href="/static/css/output.css"/>
 			<title>{ title }</title>
 		</head>
