--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -6,12 +6,27 @@ templ Base(title string) {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
+			<title>{ title }</title>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<script src="/static/js/htmx.min.js"></script>
 			<script src="/static/js/theme.js"></script>
 			<link rel="stylesheet" href="/static/css/output.css"/>
-			<title>{ title }</title>
+			<link
+				rel="icon"
+				href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌱</text></svg>"
+			/>
+			<meta property="og:title" content="Khoa Huynh"/>
+			<meta property="og:description" content="Khoa Huynh is a full stack software developer with experience in building scalable web applications."/>
+			<meta property="og:type" content="website"/>
+			<meta
+				property="og:image"
+				content="https://khoahuynh.ca/static/images/digital-garden-screenshot.png"
+			/>
+			<meta
+				property="twitter:image"
+				content="https://khoahuynh.ca/static/images/digital-garden-screenshot.png"
+			/>
 		</head>
 		<body class="bg-background text-text font-mono w-full min-h-screen">
 			<div class="mx-auto min-h-screen max-w-screen-sm px-6 py-12">
