add meta name description tag

--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -9,6 +9,8 @@ templ Base(title string) {
 			<title>{ title }</title>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<meta name="description" content="Khoa Huynh is a full stack software developer with experience in building scalable web applications."/>
+			<meta name="author" content="Khoa Huynh"/>
 			<script src="/static/js/htmx.min.js"></script>
 			<script src="/static/js/theme.js"></script>
 			<link rel="stylesheet" href="/static/css/output.css"/>
