add github link

--- a/internal/templates/pages/home.templ
+++ b/internal/templates/pages/home.templ
@@ -58,16 +58,19 @@ templ Home() {
 					Title:       "SonicSight",
 					Description: "A web application that transforms audio files into spectrograms and uses deep learning to classify sounds. Currently specialized in distinguishing between cat and dog sounds, it leverages a model I trained on Kaggle, deployed on Hugging Face with a FastHTML frontend.",
 					AppLink:     "https://sonicsight.dev/",
+					GithubLink:  "https://github.com/khoaHyh/sonicsight",
 				})
 				@components.ProjectCard(components.ProjectData{
 					Title:       "Twitter clone API",
 					Description: "Developed an API that mocks some of the features that Twitter provides. API Features include: authentication, direct messages, tweets, retweets, likes, and threads.",
 					AppLink:     "",
+					GithubLink:  "https://github.com/khoaHyh/twitter-clone-api",
 				})
 				@components.ProjectCard(components.ProjectData{
 					Title:       "Pomodomo",
 					Description: "A pomodoro web app that helps users work in intervals.",
 					AppLink:     "https://pomodomo-qok9fj4pu-khoahyh.vercel.app/",
+					GithubLink:  "https://github.com/khoaHyh/pomodomo",
 				})
 			</div>
 		</section>
