--- a/internal/templates/components/components.templ
+++ b/internal/templates/components/components.templ
@@ -105,56 +105,68 @@ type ProjectData struct {
 	Title       string
 	Description string
 	AppLink     templ.SafeURL
+	GithubLink  templ.SafeURL
 	Tags        []string
 	Image       string
 }
 
 templ ProjectCard(project ProjectData) {
-	if project.AppLink != "" {
-		<a
-			href={ project.AppLink }
-			class="group relative block h-64 sm:h-80 lg:h-96"
-			target="_blank"
-			rel="noreferrer noopener"
-			aria-label={ project.Title + " app page (opens in a new tab)" }
-		>
-			@projectCardContent(project)
-		</a>
-	} else {
-		<div class="group relative block h-64 sm:h-80 lg:h-96">
-			@projectCardContent(project)
-		</div>
-	}
-}
-
-templ projectCardContent(project ProjectData) {
-	<span class="absolute inset-0 border-2 border-dashed border-text dark:border-black"></span>
-	<div class="relative flex h-full transform items-end border-2 border-black bg-cottonCandyPink transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2">
-		<div class="p-4 !pt-0 transition-opacity group-hover:absolute group-hover:opacity-0 sm:p-6 lg:p-8">
-			if project.Image != "" {
-				<img src={ project.Image } alt={ project.Title + " screenshot" } class="w-full h-32 object-cover rounded mb-4"/>
-			} else {
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
-					viewBox="0 0 24 24"
-					class="size-10 sm:size-12 stroke-background"
-				>
-					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						stroke-width="2"
-						d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-					></path>
-				</svg>
-			}
-			<h2 class="mt-4 text-xl text-background font-medium sm:text-2xl">{ project.Title }</h2>
-		</div>
-		<div class="absolute p-4 opacity-0 transition-opacity group-hover:relative group-hover:opacity-100 sm:p-6 lg:p-8">
-			<h3 class="mt-4 text-xl text-background font-medium sm:text-2xl">{ project.Title }</h3>
-			<p class="mt-4 text-sm text-background sm:text-base">
-				{ project.Description }
-			</p>
+	<div class="group relative block h-64 sm:h-80 lg:h-96">
+		<span class="absolute inset-0 border-2 border-dashed border-text dark:border-black"></span>
+		<div class="relative flex h-full transform items-end border-2 border-black bg-cottonCandyPink transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2">
+			<div class="p-4 !pt-0 transition-opacity group-hover:absolute group-hover:opacity-0 sm:p-6 lg:p-8">
+				if project.Image != "" {
+					<img src={ project.Image } alt={ project.Title + " screenshot" } class="w-full h-32 object-cover rounded mb-4"/>
+				} else {
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						fill="none"
+						viewBox="0 0 24 24"
+						class="size-10 sm:size-12 stroke-background"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+						></path>
+					</svg>
+				}
+				<h2 class="mt-4 text-xl text-background font-medium sm:text-2xl">{ project.Title }</h2>
+			</div>
+			<div class="absolute p-4 opacity-0 transition-opacity group-hover:relative group-hover:opacity-100 sm:p-6 lg:p-8">
+				<h3 class="mt-4 text-xl text-background font-medium sm:text-2xl">{ project.Title }</h3>
+				<p class="mt-4 text-sm text-background sm:text-base">
+					{ project.Description }
+				</p>
+				<div class="flex justify-start mt-4 gap-4">
+					<a
+						href={ project.GithubLink }
+						class="mt-4 inline-flex items-center gap-2 text-sm text-background hover:text-secondaryText transition-colors"
+						target="_blank"
+						rel="noopener noreferrer"
+					>
+						<svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+							<path clipRule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" fillRule="evenodd"></path>
+						</svg>
+						View on GitHub
+					</a>
+					if project.AppLink != "" {
+						<a
+							href={ project.AppLink }
+							class="mt-4 inline-flex items-center gap-2 text-sm text-background hover:text-secondaryText transition-colors"
+							target="_blank"
+							rel="noreferrer noopener"
+							aria-label={ project.Title + " app page (opens in a new tab)" }
+						>
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M3 8.25V18a2.25 2.25 0 0 0 2.25 2.25h13.5A2.25 2.25 0 0 0 21 18V8.25m-18 0V6a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 6v2.25m-18 0h18M5.25 6h.008v.008H5.25V6ZM7.5 6h.008v.008H7.5V6Zm2.25 0h.008v.008H9.75V6Z"></path>
+							</svg>
+							View App 
+						</a>
+					}
+				</div>
+			</div>
 		</div>
 	</div>
 }
