--- a/internal/templates/components/components.templ
+++ b/internal/templates/components/components.templ
@@ -142,7 +142,7 @@ templ ProjectCard(project ProjectData) {
 				<div class="flex justify-start mt-4 gap-4">
 					<a
 						href={ project.GithubLink }
-						class="mt-4 inline-flex items-center gap-2 text-sm text-background hover:text-secondaryText transition-colors"
+						class="inline-flex items-center gap-2 text-sm text-background hover:text-secondaryText transition-colors"
 						target="_blank"
 						rel="noopener noreferrer"
 					>
@@ -154,13 +154,13 @@ templ ProjectCard(project ProjectData) {
 					if project.AppLink != "" {
 						<a
 							href={ project.AppLink }
-							class="mt-4 inline-flex items-center gap-2 text-sm text-background hover:text-secondaryText transition-colors"
+							class="inline-flex items-center gap-2 text-sm text-background hover:text-secondaryText transition-colors"
 							target="_blank"
 							rel="noreferrer noopener"
 							aria-label={ project.Title + " app page (opens in a new tab)" }
 						>
 							<svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" d="M3 8.25V18a2.25 2.25 0 0 0 2.25 2.25h13.5A2.25 2.25 0 0 0 21 18V8.25m-18 0V6a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 6v2.25m-18 0h18M5.25 6h.008v.008H5.25V6ZM7.5 6h.008v.008H7.5V6Zm2.25 0h.008v.008H9.75V6Z"></path>
+								<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25"></path>
 							</svg>
 							View App 
 						</a>
